--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+<color name="colorPrimary">#436fb4</color>
+<color name="colorPrimaryDark">#436fb4</color>
+<color name="colorAccent">#AEAEAE</color>
+<color name="white">#fff</color>
+<color name="list_item_pressed">#E3F2FD</color>
 </resources>
