--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    android:id="@+id/login_section"
+    android:id="@+id/activity_register"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+
 
 
     <ImageView
@@ -24,7 +24,25 @@
         />
 
     <EditText
-        android:id="@+id/user_email"
+        android:id="@+id/register_name"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:inputType="text"
+        android:padding="14dp"
+        android:textColor="#fff"
+        android:textColorHint="#fff"
+        android:textSize="15sp"
+        android:hint="Enter Name"
+        android:background="@color/colorPrimary"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="45dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+
+    <EditText
+        android:id="@+id/register_email"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:inputType="textEmailAddress"
@@ -32,42 +50,23 @@
         android:textColor="#fff"
         android:textColorHint="#fff"
         android:textSize="15sp"
-        android:hint="Email"
         android:background="@color/colorPrimary"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="45dp"
-        android:drawableLeft="@mipmap/ic_ema"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"/>
-
-    <EditText
-        android:id="@+id/login_psswd"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:inputType="textWebPassword|numberPassword"
-        android:padding="14dp"
-        android:textColor="#fff"
-        android:textColorHint="#fff"
-        android:textSize="15sp"
-        android:background="@color/colorPrimary"
-        android:hint="Enter Password"
+        android:hint="Enter Email"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="8dp"
-        android:drawableLeft="@mipmap/ic_launcher"
+        android:drawableLeft="@mipmap/ic_ema"
         app:layout_constraintTop_toBottomOf="@+id/user_email"
 
         />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/regist_button"
         android:layout_width="225dp"
         android:layout_height="wrap_content"
-        android:text="Sign In"
+        android:text="Register"
         android:textStyle="bold"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -79,10 +78,10 @@
         app:layout_constraintHorizontal_bias="0.503"/>
 
     <Button
-        android:id="@+id/register_button"
-        android:layout_width="225dp"
+        android:id="@+id/login_button"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
+        android:text="Already Registered?Log In"
         android:textStyle="bold"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
